--- a/themes/dentario-child/style.css
+++ b/themes/dentario-child/style.css
@@ -1,8 +1,14 @@
 @import url(../dentario/style.css);
 
+#header {
+	font-size: 14px;
+}
+
 #header h1 {
 	font-size: 5em;
     font-weight: bold;
+    line-height: 1.1em;
+    max-width: 70%;
 }
 @media (max-width: 1250px) {
 	.contact_phone_wrap {
