--- a/themes/dentario-child/style.css
+++ b/themes/dentario-child/style.css
@@ -10,14 +10,17 @@
     line-height: 1.1em;
     max-width: 70%;
 }
-@media (max-width: 1250px) {
+.top_panel_style_2 .contact_field a:hover {
+	color: #8f6628;
+}
+@media (max-width: 1260px) {
 	.contact_phone_wrap {
-		font-size: 12px!important;
+		font-size: 11px!important;
 	}
 }
 
 .contact_phone_wrap {
-		font-size: 14px!important;
+		font-size: 14px;
 	}
 
 .scheme_original .footer_wrap_inner.widget_area_inner .widget_title:after {
