--- a/themes/dentario-child/style.css
+++ b/themes/dentario-child/style.css
@@ -18,7 +18,24 @@
 		font-size: 11px!important;
 	}
 }
-
+@media (max-width: 1730px) {
+	#header h1 {
+		font-size: 4em;
+	}
+	#header p {
+		font-size: 1em;
+	}
+}
+@media (max-width: 1470px) {
+	#header h1 {
+		font-size: 3em;
+	}
+}
+@media (max-width: 1280px) {
+	#header h1 {
+		font-size: 2em;
+	}
+}
 .contact_phone_wrap {
 		font-size: 14px;
 	}
